26.1.2 nonsense