@@ -2,33 +2,25 @@ package net.mehvahdjukaar.sawmill.integration.rei;
 
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
 import me.shedaniel.rei.api.common.display.Display;
-import me.shedaniel.rei.api.common.display.basic.BasicDisplay;
+import me.shedaniel.rei.api.common.display.DisplaySerializer;
 import me.shedaniel.rei.api.common.entry.EntryIngredient;
 import me.shedaniel.rei.api.common.util.EntryIngredients;
-import me.shedaniel.rei.plugin.common.BuiltinPlugin;
-import me.shedaniel.rei.plugin.common.displays.DefaultStoneCuttingDisplay;
-import mezz.jei.api.gui.drawable.IDrawable;
-import mezz.jei.api.helpers.IGuiHelper;
-import mezz.jei.common.Constants;
-import net.mehvahdjukaar.sawmill.SawmillMod;
-import net.mehvahdjukaar.sawmill.WoodcuttingRecipe;
-import net.minecraft.network.chat.Component;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.crafting.RecipeHolder;
-import net.minecraft.world.item.crafting.StonecutterRecipe;
+import net.mehvahdjukaar.sawmill.WoodcuttingEntry;
+import net.minecraft.resources.Identifier;
+import org.jetbrains.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-public class WoodcuttingDisplay extends BasicDisplay {
+public class WoodcuttingDisplay implements Display {
+    private final List<EntryIngredient> input;
+    private final List<EntryIngredient> output;
     private final int inputCount;
 
-    public WoodcuttingDisplay(RecipeHolder<WoodcuttingRecipe> recipe) {
-        super(EntryIngredients.ofIngredients(recipe.value().getIngredients()), Collections.singletonList(EntryIngredients.of(recipe.value().getResultItem(BasicDisplay.registryAccess()))),
-                Optional.ofNullable(recipe.id()));
-        this.inputCount = recipe.value().getInputCount();
-
+    public WoodcuttingDisplay(WoodcuttingEntry entry) {
+        this.input = List.of(EntryIngredients.ofIngredient(entry.input()));
+        this.output = List.of(EntryIngredients.of(entry.result()));
+        this.inputCount = entry.inputCount();
     }
 
     public int getInputCount() {
@@ -36,8 +28,28 @@ public class WoodcuttingDisplay extends BasicDisplay {
     }
 
     @Override
+    public List<EntryIngredient> getInputEntries() {
+        return input;
+    }
+
+    @Override
+    public List<EntryIngredient> getOutputEntries() {
+        return output;
+    }
+
+    @Override
     public CategoryIdentifier<?> getCategoryIdentifier() {
         return REIPlugin.WOODCUTTING_DISPLAY;
     }
 
+    @Override
+    public Optional<Identifier> getDisplayLocation() {
+        return Optional.empty();
+    }
+
+    @Nullable
+    @Override
+    public DisplaySerializer<? extends Display> getSerializer() {
+        return null;
+    }
 }
